--- a/index.ipynb
+++ b/index.ipynb
@@ -104,57 +104,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59},\n",
-       " {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 13591863,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Los Cabos',\n",
-       "  'Country': 'Mexico',\n",
-       "  'Population': 287651,\n",
-       "  'Area': 3750},\n",
-       " {'City': 'Walla Walla Valley',\n",
-       "  'Country': 'USA',\n",
-       "  'Population': 32237,\n",
-       "  'Area': 33},\n",
-       " {'City': 'Marakesh', 'Country': 'Morocco', 'Population': 928850, 'Area': 200},\n",
-       " {'City': 'Albuquerque',\n",
-       "  'Country': 'New Mexico',\n",
-       "  'Population': 559277,\n",
-       "  'Area': 491},\n",
-       " {'City': 'Archipelago Sea',\n",
-       "  'Country': 'Finland',\n",
-       "  'Population': 60000,\n",
-       "  'Area': 8300},\n",
-       " {'City': 'Iguazu Falls',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 0,\n",
-       "  'Area': 672},\n",
-       " {'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000, 'Area': 27},\n",
-       " {'City': 'Toronto', 'Country': 'Canada', 'Population': 630, 'Area': 2731571},\n",
-       " {'City': 'Pyeongchang',\n",
-       "  'Country': 'South Korea',\n",
-       "  'Population': 2581000,\n",
-       "  'Area': 3194}]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'records' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-4663ef099497>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mtravel_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpandas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_excel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./cities.xlsx'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mcities\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtravel_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'records'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mrecords\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'records' is not defined"
+     ]
     }
    ],
    "source": [
     "import pandas\n",
     "travel_df = pandas.read_excel('./cities.xlsx')\n",
     "cities = travel_df.to_dict('records')\n",
-    "cities\n",
+    "records\n",
     "\n"
    ]
   },
